force-app/main/default/objects/Quote_Line_Item__c/fields/Air_Decay__c.field-meta.xml
<CustomField>
    <fullName>Air_Decay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Air Decay</label>
    <type>Checkbox</type>
</CustomField>