force-app/main/default/objects/Quote_Line_Item__c/fields/Alternate_Proposal_Drawing__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Proposal_Drawing__c</fullName>
    <label>Alternate Proposal Drawing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>