force-app/main/default/objects/Quote_Line_Item__c/fields/Annual_Usage__c.field-meta.xml
<CustomField>
    <fullName>Annual_Usage__c</fullName>
    <label>Annual Usage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Est. Annual Usage (EAU)</fullName>
            </value>
            <value>
                <fullName>Pieces</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>