force-app/main/default/objects/Quote_Line_Item__c/fields/Buy__c.field-meta.xml
<CustomField>
    <fullName>Buy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Buy-In + Processing</label>
    <type>Checkbox</type>
</CustomField>