force-app/main/default/objects/Quote_Line_Item__c/fields/Buy_In_Complete__c.field-meta.xml
<CustomField>
    <fullName>Buy_In_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Buy-In Complete</label>
    <type>Checkbox</type>
</CustomField>