force-app/main/default/objects/Quote_Line_Item__c/fields/Buyer__c.field-meta.xml
<CustomField>
    <fullName>Buyer__c</fullName>
    <formula>Quote_Express__r.Buyer_POC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Buyer</label>
    <type>Text</type>
</CustomField>