force-app/main/default/objects/Quote_Line_Item__c/fields/Clinch_Type__c.field-meta.xml
<CustomField>
    <fullName>Clinch_Type__c</fullName>
    <label>Clinch Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pierce &amp; Clinch</fullName>
            </value>
            <value>
                <fullName>Clinch Only</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>