force-app/main/default/objects/Quote_Line_Item__c/fields/Completely_New_Design__c.field-meta.xml
<CustomField>
    <fullName>Completely_New_Design__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Completely New Design</label>
    <type>Checkbox</type>
</CustomField>