force-app/main/default/objects/Quote_Line_Item__c/fields/Component_Material__c.field-meta.xml
<CustomField>
    <fullName>Component_Material__c</fullName>
    <label>Component Material</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aluminum Sheet</fullName>
            </value>
            <value>
                <fullName>Aluminum Cast</fullName>
            </value>
            <value>
                <fullName>Aluminum Extrusion</fullName>
            </value>
            <value>
                <fullName>Iron Cast</fullName>
            </value>
            <value>
                <fullName>Magnesium Cast</fullName>
            </value>
            <value>
                <fullName>Multiple layer (Add to Description)</fullName>
            </value>
            <value>
                <fullName>Plastic</fullName>
            </value>
            <value>
                <fullName>Steel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>