force-app/main/default/objects/Quote_Line_Item__c/fields/Customer_Drawing__c.field-meta.xml
<CustomField>
    <fullName>Customer_Drawing__c</fullName>
    <label>Customer Drawing #</label>
    <length>18</length>
    <type>Text</type>
</CustomField>