force-app/main/default/objects/Quote_Line_Item__c/fields/Customer_Drawing_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Drawing_Date__c</fullName>
    <label>Drawing Rev Date</label>
    <type>Date</type>
</CustomField>