force-app/main/default/objects/Quote_Line_Item__c/fields/Customer_Drawing_Rev__c.field-meta.xml
<CustomField>
    <fullName>Customer_Drawing_Rev__c</fullName>
    <label>Drawing Rev</label>
    <length>18</length>
    <type>Text</type>
</CustomField>