force-app/main/default/objects/Quote_Line_Item__c/fields/Customer_Part__c.field-meta.xml
<CustomField>
    <fullName>Customer_Part__c</fullName>
    <inlineHelpText>It represents the specific number of the part produced/manufactured</inlineHelpText>
    <label>Customer Part #</label>
    <length>18</length>
    <type>Text</type>
</CustomField>