force-app/main/default/objects/Quote_Line_Item__c/fields/Developer_Charges__c.field-meta.xml
<CustomField>
    <fullName>Developer_Charges__c</fullName>
    <label>Developer Charges</label>
    <length>18</length>
    <type>Text</type>
</CustomField>