force-app/main/default/objects/Quote_Line_Item__c/fields/Est_Annual_Usage__c.field-meta.xml
<CustomField>
    <fullName>Est_Annual_Usage__c</fullName>
    <label>Est. Annual Usage (EAU)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>