force-app/main/default/objects/Quote_Line_Item__c/fields/Feasibility__c.field-meta.xml
<CustomField>
    <fullName>Feasibility__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Feasibility</label>
    <type>Checkbox</type>
</CustomField>