force-app/main/default/objects/Quote_Line_Item__c/fields/Feasible_Customer__c.field-meta.xml
<CustomField>
    <fullName>Feasible_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Feasible-Customer</label>
    <type>Checkbox</type>
</CustomField>