force-app/main/default/objects/Quote_Line_Item__c/fields/Feasible_Proposal__c.field-meta.xml
<CustomField>
    <fullName>Feasible_Proposal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Feasible-Proposal</label>
    <type>Checkbox</type>
</CustomField>