force-app/main/default/objects/Quote_Line_Item__c/fields/Gauging__c.field-meta.xml
<CustomField>
    <fullName>Gauging__c</fullName>
    <label>Gauging</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>