force-app/main/default/objects/Quote_Line_Item__c/fields/Grade_Hardness__c.field-meta.xml
<CustomField>
    <fullName>Grade_Hardness__c</fullName>
    <label>Grade/Hardness</label>
    <length>18</length>
    <type>Text</type>
</CustomField>