force-app/main/default/objects/Quote_Line_Item__c/fields/Grounding__c.field-meta.xml
<CustomField>
    <fullName>Grounding__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Grounding</label>
    <type>Checkbox</type>
</CustomField>