force-app/main/default/objects/Quote_Line_Item__c/fields/Like_Part__c.field-meta.xml
<CustomField>
    <fullName>Like_Part__c</fullName>
    <label>Like Part #</label>
    <length>100</length>
    <type>Text</type>
</CustomField>