force-app/main/default/objects/Quote_Line_Item__c/fields/Manufacture__c.field-meta.xml
<CustomField>
    <fullName>Manufacture__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manufacture</label>
    <type>Checkbox</type>
</CustomField>