force-app/main/default/objects/Quote_Line_Item__c/fields/Net_Weight_Kg__c.field-meta.xml
<CustomField>
    <fullName>Net_Weight_Kg__c</fullName>
    <label>Net Weight (Kg.)</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>