force-app/main/default/objects/Quote_Line_Item__c/fields/No_of_Parts_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>No_of_Parts_Vehicle__c</fullName>
    <label>No. of Parts/Vehicle</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>