force-app/main/default/objects/Quote_Line_Item__c/fields/Not_Feasible__c.field-meta.xml
<CustomField>
    <fullName>Not_Feasible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Not Feasible</label>
    <type>Checkbox</type>
</CustomField>