force-app/main/default/objects/Quote_Line_Item__c/fields/of_SPAC_Element_App__c.field-meta.xml
<CustomField>
    <fullName>of_SPAC_Element_App__c</fullName>
    <label># of SPAC Element/App</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>