force-app/main/default/objects/Quote_Line_Item__c/fields/Part_Cost_Currency__c.field-meta.xml
<CustomField>
    <fullName>Part_Cost_Currency__c</fullName>
    <label>Part Cost Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CAD</fullName>
            </value>
            <value>
                <fullName>USD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>