force-app/main/default/objects/Quote_Line_Item__c/fields/Partially_Close_to__c.field-meta.xml
<CustomField>
    <fullName>Partially_Close_to__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Partially Close to</label>
    <type>Checkbox</type>
</CustomField>