force-app/main/default/objects/Quote_Line_Item__c/fields/PCS__c.field-meta.xml
<CustomField>
    <fullName>PCS__c</fullName>
    <label>PCS</label>
    <length>18</length>
    <type>Text</type>
</CustomField>