force-app/main/default/objects/Quote_Line_Item__c/fields/PCS_Yr__c.field-meta.xml
<CustomField>
    <fullName>PCS_Yr__c</fullName>
    <label>PCS/Yr</label>
    <length>18</length>
    <type>Text</type>
</CustomField>