force-app/main/default/objects/Quote_Line_Item__c/fields/Piece__c.field-meta.xml
<CustomField>
    <fullName>Piece__c</fullName>
    <label>Pieces</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>