force-app/main/default/objects/Quote_Line_Item__c/fields/Pieces__c.field-meta.xml
<CustomField>
    <fullName>Pieces__c</fullName>
    <label>Target Price/M ($)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>