force-app/main/default/objects/Quote_Line_Item__c/fields/Pieces_Per_Year_Pieces__c.field-meta.xml
<CustomField>
    <fullName>Pieces_Per_Year_Pieces__c</fullName>
    <label>Pieces Per Year/Pieces</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pieces Per Year</fullName>
            </value>
            <value>
                <fullName>Pieces</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>