force-app/main/default/objects/Quote_Line_Item__c/fields/Pieces_Value__c.field-meta.xml
<CustomField>
    <fullName>Pieces_Value__c</fullName>
    <label>Pieces per year/Pieces Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>