force-app/main/default/objects/Quote_Line_Item__c/fields/Prevailing_Torque__c.field-meta.xml
<CustomField>
    <fullName>Prevailing_Torque__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prevailing Torque</label>
    <type>Checkbox</type>
</CustomField>