force-app/main/default/objects/Quote_Line_Item__c/fields/Production_Lead_Time__c.field-meta.xml
<CustomField>
    <fullName>Production_Lead_Time__c</fullName>
    <inlineHelpText>Working weeks which takes to finish the production process and it won&apos;t include the period in which process starts.</inlineHelpText>
    <label>Production Lead Time (Working Weeks)</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>