force-app/main/default/objects/Quote_Line_Item__c/fields/Proof_Load_Stength__c.field-meta.xml
<CustomField>
    <fullName>Proof_Load_Stength__c</fullName>
    <label>Proof Load Strength</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SPAC_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PCO5 (ISO - 898 -2)</fullName>
            </value>
            <value>
                <fullName>PC5 (ISO 898-2)</fullName>
            </value>
            <value>
                <fullName>PC8 (ISO 898-2)</fullName>
            </value>
            <value>
                <fullName>PC10 (ISO 898-2)</fullName>
            </value>
            <value>
                <fullName>PC12 (ISO 898-2)</fullName>
            </value>
            <value>
                <fullName>PC 8.8 (ISO 898-1)</fullName>
            </value>
            <value>
                <fullName>PC 9.8 (ISO 898-1)</fullName>
            </value>
            <value>
                <fullName>PC 10.9 (ISO 898-1)</fullName>
            </value>
            <value>
                <fullName>M6</fullName>
            </value>
            <value>
                <fullName>M7</fullName>
            </value>
            <value>
                <fullName>M8</fullName>
            </value>
            <value>
                <fullName>M9</fullName>
            </value>
            <value>
                <fullName>M10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>