force-app/main/default/objects/Quote_Line_Item__c/fields/Proposal_Drawing__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Drawing__c</fullName>
    <label>Proposal Drawing#</label>
    <length>255</length>
    <type>Text</type>
</CustomField>