force-app/main/default/objects/Quote_Line_Item__c/fields/Proposal_Drawing_Rev__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Drawing_Rev__c</fullName>
    <label>Proposal Drawing Rev</label>
    <length>255</length>
    <type>Text</type>
</CustomField>