force-app/main/default/objects/Quote_Line_Item__c/fields/Proposal_Drawing_Rev_Date__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Drawing_Rev_Date__c</fullName>
    <label>Proposal Drawing Rev Date</label>
    <type>Date</type>
</CustomField>