force-app/main/default/objects/Quote_Line_Item__c/fields/Proposal_Part_Description__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Part_Description__c</fullName>
    <label>Part Description</label>
    <type>TextArea</type>
</CustomField>