force-app/main/default/objects/Quote_Line_Item__c/fields/Push_Out_Min__c.field-meta.xml
<CustomField>
    <fullName>Push_Out_Min__c</fullName>
    <label>Push- Out Min</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>100 N/ 0.1 kN</fullName>
            </value>
            <value>
                <fullName>200 N/ 0.2 kN</fullName>
            </value>
            <value>
                <fullName>300 N/ 0.3 kN</fullName>
            </value>
            <value>
                <fullName>400 N/ 0.4 kN</fullName>
            </value>
            <value>
                <fullName>500 N/ 0.5 kN</fullName>
            </value>
            <value>
                <fullName>1000 N/ 1.0 kN</fullName>
                <isActive>false</isActive>
                <label>1000 N/ 1.0 kN</label>
            </value>
            <value>
                <fullName>10000 N/ 10.0 kN</fullName>
                <isActive>false</isActive>
                <label>10000 N/ 10.0 kN</label>
            </value>
            <value>
                <fullName>1100 N/ 1.1 kN</fullName>
                <isActive>false</isActive>
                <label>1100 N/ 1.1 kN</label>
            </value>
            <value>
                <fullName>1200 N/ 1.2 kN</fullName>
                <isActive>false</isActive>
                <label>1200 N/ 1.2 kN</label>
            </value>
            <value>
                <fullName>1300 N/ 1.3 kN</fullName>
                <isActive>false</isActive>
                <label>1300 N/ 1.3 kN</label>
            </value>
            <value>
                <fullName>1400 N/ 1.4 kN</fullName>
                <isActive>false</isActive>
                <label>1400 N/ 1.4 kN</label>
            </value>
            <value>
                <fullName>1500 N/ 1.5 kN</fullName>
                <isActive>false</isActive>
                <label>1500 N/ 1.5 kN</label>
            </value>
            <value>
                <fullName>1600 N/ 1.6 kN</fullName>
                <isActive>false</isActive>
                <label>1600 N/ 1.6 kN</label>
            </value>
            <value>
                <fullName>1700 N/ 1.7 kN</fullName>
                <isActive>false</isActive>
                <label>1700 N/ 1.7 kN</label>
            </value>
            <value>
                <fullName>1800 N/ 1.8 kN</fullName>
                <isActive>false</isActive>
                <label>1800 N/ 1.8 kN</label>
            </value>
            <value>
                <fullName>1900 N/ 1.9 kN</fullName>
                <isActive>false</isActive>
                <label>1900 N/ 1.9 kN</label>
            </value>
            <value>
                <fullName>2000 N/ 2.0 kN</fullName>
                <isActive>false</isActive>
                <label>2000 N/ 2.0 kN</label>
            </value>
            <value>
                <fullName>2100 N/ 2.1 kN</fullName>
                <isActive>false</isActive>
                <label>2100 N/ 2.1 kN</label>
            </value>
            <value>
                <fullName>2200 N/ 2.2 kN</fullName>
                <isActive>false</isActive>
                <label>2200 N/ 2.2 kN</label>
            </value>
            <value>
                <fullName>2300 N/ 2.3 kN</fullName>
                <isActive>false</isActive>
                <label>2300 N/ 2.3 kN</label>
            </value>
            <value>
                <fullName>2400 N/ 2.4 kN</fullName>
                <isActive>false</isActive>
                <label>2400 N/ 2.4 kN</label>
            </value>
            <value>
                <fullName>2500 N/ 2.5 kN</fullName>
                <isActive>false</isActive>
                <label>2500 N/ 2.5 kN</label>
            </value>
            <value>
                <fullName>2600 N/ 2.6 kN</fullName>
                <isActive>false</isActive>
                <label>2600 N/ 2.6 kN</label>
            </value>
            <value>
                <fullName>2700 N/ 2.7 kN</fullName>
                <isActive>false</isActive>
                <label>2700 N/ 2.7 kN</label>
            </value>
            <value>
                <fullName>2800 N/ 2.8 kN</fullName>
                <isActive>false</isActive>
                <label>2800 N/ 2.8 kN</label>
            </value>
            <value>
                <fullName>2900 N/ 2.9 kN</fullName>
                <isActive>false</isActive>
                <label>2900 N/ 2.9 kN</label>
            </value>
            <value>
                <fullName>3000 N/ 3.0 kN</fullName>
                <isActive>false</isActive>
                <label>3000 N/ 3.0 kN</label>
            </value>
            <value>
                <fullName>3100 N/ 3.1 kN</fullName>
                <isActive>false</isActive>
                <label>3100 N/ 3.1 kN</label>
            </value>
            <value>
                <fullName>3200 N/ 3.2 kN</fullName>
                <isActive>false</isActive>
                <label>3200 N/ 3.2 kN</label>
            </value>
            <value>
                <fullName>3300 N/ 3.3 kN</fullName>
                <isActive>false</isActive>
                <label>3300 N/ 3.3 kN</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>