force-app/main/default/objects/Quote_Line_Item__c/fields/Quoted_Group__c.field-meta.xml
<CustomField>
    <fullName>Quoted_Group__c</fullName>
    <label>Quoted Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Group 1</fullName>
            </value>
            <value>
                <fullName>Group 2</fullName>
            </value>
            <value>
                <fullName>Group 3</fullName>
            </value>
            <value>
                <fullName>Group 4</fullName>
            </value>
            <value>
                <fullName>Group 5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>