force-app/main/default/objects/Quote_Line_Item__c/fields/Quoted_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Quoted_Supplier__c</fullName>
    <label>Quoted Supplier</label>
    <length>100</length>
    <type>Text</type>
</CustomField>