force-app/main/default/objects/Quote_Line_Item__c/fields/RB_W_Alternative_Proposal__c.field-meta.xml
<CustomField>
    <fullName>RB_W_Alternative_Proposal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alternative Proposal</label>
    <type>Checkbox</type>
</CustomField>