force-app/main/default/objects/Quote_Line_Item__c/fields/RBW_Drawing_Number__c.field-meta.xml
<CustomField>
    <fullName>RBW_Drawing_Number__c</fullName>
    <label>RBW Drawing Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>