force-app/main/default/objects/Quote_Line_Item__c/fields/Reasons__c.field-meta.xml
<CustomField>
    <fullName>Reasons__c</fullName>
    <label>Reasons</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>