force-app/main/default/objects/Quote_Line_Item__c/fields/Rev__c.field-meta.xml
<CustomField>
    <fullName>Rev__c</fullName>
    <label>Rev</label>
    <length>100</length>
    <type>Text</type>
</CustomField>