force-app/main/default/objects/Quote_Line_Item__c/fields/Risk_Analysis__c.field-meta.xml
<CustomField>
    <fullName>Risk_Analysis__c</fullName>
    <label>Risk Analysis</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>