force-app/main/default/objects/Quote_Line_Item__c/fields/Same_as__c.field-meta.xml
<CustomField>
    <fullName>Same_as__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Same as</label>
    <type>Checkbox</type>
</CustomField>