force-app/main/default/objects/Quote_Line_Item__c/fields/Sample_Lead_Time__c.field-meta.xml
<CustomField>
    <fullName>Sample_Lead_Time__c</fullName>
    <inlineHelpText>Working weeks which includes Pre and Post processing stages once order is placed</inlineHelpText>
    <label>Sample Lead Time</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>