force-app/main/default/objects/Quote_Line_Item__c/fields/SPAC_Annual_Volume__c.field-meta.xml
<CustomField>
    <fullName>SPAC_Annual_Volume__c</fullName>
    <formula>of_SPAC_Element_App__c  *  Pieces_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SPAC Annual Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>