force-app/main/default/objects/Quote_Line_Item__c/fields/SPAC_Material__c.field-meta.xml
<CustomField>
    <fullName>SPAC_Material__c</fullName>
    <label>SPAC Material</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Carbon Steel</fullName>
            </value>
            <value>
                <fullName>Stainless Steel</fullName>
            </value>
            <value>
                <fullName>Aluminium</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>