force-app/main/default/objects/Quote_Line_Item__c/fields/SPAC_Type__c.field-meta.xml
<CustomField>
    <fullName>SPAC_Type__c</fullName>
    <label>SPAC Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SPAC® Cap Nut</fullName>
            </value>
            <value>
                <fullName>SPAC® Ball Stud</fullName>
            </value>
            <value>
                <fullName>SPAC® Bracket/nut assembly</fullName>
            </value>
            <value>
                <fullName>SPAC® Clinch Bolt</fullName>
            </value>
            <value>
                <fullName>SPAC® Clinch Stud</fullName>
            </value>
            <value>
                <fullName>SPAC® Nut</fullName>
            </value>
            <value>
                <fullName>SPAC® Other</fullName>
            </value>
            <value>
                <fullName>SPAC® Spacer</fullName>
            </value>
            <value>
                <fullName>SPAC® Stud</fullName>
            </value>
            <value>
                <fullName>SPAC® Bolt Assembly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>