force-app/main/default/objects/Quote_Line_Item__c/fields/Special_SPAC_Thread__c.field-meta.xml
<CustomField>
    <fullName>Special_SPAC_Thread__c</fullName>
    <label>Special SPAC Thread</label>
    <length>18</length>
    <type>Text</type>
</CustomField>